Correct BasicAuthenticationService and its test function and README.md